--- a/Assets/Config/settings.yaml
+++ b/Assets/Config/settings.yaml
@@ -1,3 +1,7 @@
+# GRAPHICS SETTINGS ---
+
 graphics:
-	gibs: 2
-	fullscreen: false
+  gibs: 2 # 0 -> none; 1 -> normal; 2 -> extra
+  fullscreen: true # Whether or not the game should start in fullscreen
+
+# --- GRAPHICS SETTINGS
