Lots of small changes
-Structs for the BeefEye's attack (shockwave stuff)

-Added function to enemy interface and therefore to Worm and BeefEye

--- a/Assets/Config/settings.yaml
+++ b/Assets/Config/settings.yaml
@@ -7,6 +7,6 @@ graphics:
 
 # AUDIO SETTINGS ---
 audio:
-  musicVolume: -4.0 # Decibles difference on volume, -4 by default (loud music!)
+  musicVolume: -4.0 # -/+ Decibles on volume, -4 by default (loud music!)
 
 # --- AUDIO SETTINGS
